# HelixScope

./: .gitignore  HelixScope_VISION.md  Makefile  README.md  environment.yml  pyproject.toml
backend/src/helixscope/: __init__.py  cli.py
backend/src/helixscope/analysis/: __init__.py
backend/src/helixscope/io/: __init__.py
backend/src/helixscope/io/motifs/: __init__.py  bed.py  common.py  fimo.py  fimo_scanner.py  table.py
backend/src/helixscope/normalize/: __init__.py
backend/src/helixscope/render/: __init__.py  motifs.py  static.py
backend/src/helixscope/server/: __init__.py  app.py
backend/src/helixscope/skill/: __init__.py  install.py
backend/src/helixscope/spec/: __init__.py  loaders.py  models.py
backend/tests/: test_cli.py  test_motif_bed_import.py  test_motif_fimo_import.py  test_motif_fimo_scanner.py  test_motif_table_import.py  test_motifs.py  test_server.py  test_skill_install.py  test_spec_and_render.py
examples/: all_motif_subset.csv  fimo.tsv  minimal_locus_probe.yaml  motif_annotations.bed  motif_track_locus_probe.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
skills/helixscope/: SKILL.md
