[project]
name = "helixscope"
version = "0.1.0"
description = "Headless-first biological signal visualization and reporting framework."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.6",
  "jinja2>=3.1.4",
  "matplotlib>=3.9.3",
  "numpy>=2.1.3",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "typer>=0.15.1",
  "uvicorn[standard]>=0.32.1",
]

[project.scripts]
helixscope = "helixscope.cli:main"

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.13.0",
  "pytest>=8.3.4",
  "ruff>=0.8.3",
  "types-PyYAML>=6.0.12.20240917",
]

[project.optional-dependencies]
bio = [
  "bioframe>=0.7.2",
  "pyBigWig>=0.3.24",
  "pysam>=0.22.1",
]
tables = [
  "duckdb>=1.1.3",
  "pandas>=2.2.3",
  "polars>=1.17.1",
  "pyarrow>=18.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/helixscope"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
line-length = 100
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["helixscope"]
strict = true
